--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,11 @@
 .App {
   display: flex;
-  flex-direction: column;
-  align-items:  center;
-  
+  flex-direction: column; 
+  text-align: center;
 }
 
 h1 {
-  font-size: 200;
+  font-weight: 200;
 }
 
 .linha {
